Fixed site so it now works on firefox

--- a/index.css
+++ b/index.css
@@ -71,26 +71,23 @@ img {
     background-image: url("img/title.png");
     background-size:65vw;
     background-repeat:no-repeat;
-    background-position-x:center;
-    background-position-y:center;
+    background-position:center;
     transform: translateZ(-2px) scale(2) translateY(-100px);
 }
 .parallax__layer--sun {
     background-image: url("img/sun.png");
     background-size:32vw;
     background-repeat:no-repeat;
-    background-position-x:center;
-    background-position-y:center;
+    background-position:center;
     transform: translateZ(-8px) scale(5) translateY(-100px);
 }
 .parallax__layer--skylinefront {
     background-image: url("img/skylinefront.png");
     background-size:contain;
     background-repeat:no-repeat;
-    background-position-x:center;
-    background-position-y:bottom;
+    background-position:center;
     transform: translateZ(0);
-    bottom: -23vh;
+    bottom: -100vh;
     /*max-width:1920px;
     margin:auto;*/
 }
@@ -98,10 +95,9 @@ img {
     background-image: url("img/skylineback.png");
     background-size:contain;
     background-repeat:no-repeat;
-    background-position-x:center;
-    background-position-y:bottom;
+    background-position:center;
     transform: translateZ(-1px) scale(2);
-    bottom: -23vh;
+    bottom: -170vh;
     /*max-width:1920px;
     margin:auto;*/
 }
